# super-duper-broccoli

./: .bandit  .coverage  .coveragerc  .cursorrules  .env.example  .gitignore  .gitmodules  .graphifyignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_FIX_PLAN.md  BOT_AUDIT_REPORT.md  CLAUDE.md  CONFIGURATION_AUDIT.md  DEEP_AUDIT_REPORT.md  FREE_AI_RESOURCES.md  LICENSE  MEMORY.md  Makefile  OPENCLAW.md  README.md  STRATEGY_AUTONOMOUS_DASHBOARD.md  VERIFICATION_REPORT.md  WEBSOCKET_AUDIT_REPORT.md  artifacts  check_balance.py  check_polymarket_balance.py  data  docker-compose.integrations.yml  ecosystem.config.js  main_agentic_clob.py  pyproject.toml  pytest.ini  requirements.txt  ruflo_config.json  sitecustomize.py  task.md  user_data
.agents/: adaptive_execution_skill.md  data_ingestion_skill.md  deep_hedging_skill.md  earnings_sentiment_skill.md  feature_engineering_skill.md  macro_intelligence_skill.md  market_intelligence_skill.md  portfolio_optimization_skill.md  post_trade_analytics_skill.md  predictive_opinion_skill.md  risk_management_skill.md  security_rbac_skill.md  vol_surface_skill.md
.github/: copilot-instructions.md
agent_skills/: registry.py
agents/: copy_trading_agent.py  health_monitor_agent.py
api/: __init__.py  api_server.py  dashboard.py
bootstrap/: factories.py  helpers.py  initializer.py  lifecycle.py  loops.py  runtime_context.py  scheduler.py  security.py  service_factory.py  validators.py
config/: __init__.py  agent_integrations.json  ai_specialists.json  backtest_config.json  chart_pattern_config.json  constants.py  earnings_config.json  feature_config.json  free_ai_provider_sources.json  gsd_operating_system.json  health.json  hedging_config.json  ledger_schema.sql  llm_council.json  macro_config.json  mcp_tools.json  mirofish.json  openviking.json  persona_prompts.json  polymarket_watchlist.json  portfolio_config.json  project_contexts.json  quant-agentic-trading-core.service  rl_training_blueprint.json  runtime_architecture.py  settings.json  settings.py  superpowers.json  trading.json  trading_agents_playbook.json  trading_params.json  vibe_prompts.json  vol_surface_config.json
continuous_improvement/: agent.py  analyzer.py  test_improver.py
core/: arbitrage_feedback_loop.py  auto_repair_agent.py  autonomic_healer.py  autonomous_mode_controller.py  autonomous_trading_loop.py  command_router.py  container.py  freqai_engine.py  health_monitor.py  health_supervisor_agent.py  lobstar_cognitive_brain.py  ml_bridge.py  mlops_feedback_loop.py  orchestrator.py  performance_attribution.py  portfolio_risk_engine.py  quantum_runner.py  signal_executor.py  strategy_lifecycle_manager.py  strategy_manager.py  strategy_selector.py  swarm_supervisor.py  training_pipeline.py  wallet_manager.py
data/: active_wallet.enc  clob_wallet.enc  (+8 more)
src/agents/mirothinker/apps/collect-trace/: README.md  pyproject.toml
src/agents/mirothinker/apps/collect-trace/scripts/: collect_trace_claude37.sh  collect_trace_gpt41.sh  collect_trace_gpt5.sh  collect_trace_qwen3.sh
src/agents/mirothinker/apps/collect-trace/utils/: merge_chatml_msgs_to_one_json.py  process_logs.py
src/agents/mirothinker/apps/collect-trace/utils/converters/: __init__.py  convert_non_oai_to_chatml.py  convert_oai_to_chatml.py  convert_to_chatml_auto_batch.py  example_usage.py  system_prompts.py
src/agents/mirothinker/apps/gradio-demo/: .env.example  README.md  main.py  prompt_patch.py  pyproject.toml  utils.py
src/agents/polymarket_lp_tool/rust_mm_bot/: .env.example  Cargo.toml  PARITY_CHECKLIST.md  README.md  strategy_state.json
src/agents/polymarket_lp_tool/rust_mm_bot/src/: config.rs  custom_rules.rs  dashboard.rs  execution_engine.rs  main.rs  market_resolver.rs  models.rs  orderbook.rs  persistence.rs  polymarket_api.rs  pricing_engine.rs  rewards.rs  risk_monitor.rs  telegram.rs  tui.rs  websocket.rs
src/core/backtest/nautilus_backtest/crates/python/: Cargo.toml  pyproject.toml
(+1245 files in other folders)
