[project]
name = "quant-agentic-trading-core"
version = "0.1.0"
description = "Agentic quantitative trading core for Polymarket CLOB workflows."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Lobstar Quant Agentic OS" }]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "graphify-out",
    "logs",
    "scratch",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7"]
ignore = [
    "E501",
    "E402",
    "F401",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false
explicit_package_bases = true
exclude = [
    "^\\.venv/",
    "^graphify-out/",
    "^logs/",
    "^scratch/",
    "^agent_skills/.*/entrypoint\\.py$",
    "^agents/gitagent/",
    "^agents/mirothinker/",
    "^agents/polymarket_lp_tool/",
    "^agents/polybot/",
    "^utils/polymarket_data/",
    "^engine/backtest/nautilus_backtest/",
]

[tool.coverage.run]
branch = true
source = ["."]
omit = [
    ".venv/*",
    "graphify-out/*",
    "logs/*",
    "scratch/*",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
