[package]
name = "polymarket_lp_rust_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
axum = "0.8"
ratatui = "0.29"
crossterm = "0.29"
k256 = "0.13"
sha3 = "0.10"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
