[project]
name = "gradio-demo"
version = "0.1.0"
description = "Gradio Demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "hydra-core>=1.3.0",
    "miroflow-agent",
    "aiohttp>=3.12.15",
    "gradio>=5.42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["./"]

[tool.uv.sources]
miroflow-agent = { path = "../miroflow-agent", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.1",
]
