[package]
name = "python"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "_native_ext"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
native_core = { package = "core", path = "../core" }
pyo3 = { version = "0.24.2", features = ["extension-module"] }
